deploy-service-ingress-pedidos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-getionopedidos-back
  namespace: desarrollo
  labels:
    app: getionopedidos-back
spec:
  replicas: 2
  selector:
    matchLabels:
      app: getionopedidos-back
  template:
    metadata:
      labels:
        app: getionopedidos-back
    spec:
      containers:
        - name: getionopedidos-back
          image: acreastest.azurecr.io/gestionpedidos-back:latest
          ports:
            - containerPort: 3158

          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"

---
apiVersion: v1
kind: Service
metadata:
  name: svc-getionopedidos-back
  namespace: desarrollo
  labels:
    app: getionopedidos-back
spec:
  type: LoadBalancer
  selector:
    app: getionopedidos-back
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3158


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-getionopedidos-back
  namespace: desarrollo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-getionopedidos-back
                port:
                  number: 8080
